fix(ListSearchResults): change button element position on small screens

--- a/Components/ListSearchResults/Partials/_header.scss
+++ b/Components/ListSearchResults/Partials/_header.scss
@@ -2,12 +2,7 @@
   --form-inner-space: 6px;
   border: 2px solid var(--color-border);
   display: flex;
-  flex-direction: column;
   padding: var(--form-inner-space);
-
-  @media (min-width: $breakpoint-mobile-horizontal) {
-    flex-direction: row;
-  }
 
   .input {
     border: 0;
